--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "postinstall": "typewind generate",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -16,7 +17,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typewind": "^0.0.20"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
