--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-grid-layout": "^1.3.4",
     "typewind": "^0.0.20"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.10",
-    "@types/react-grid-layout": "^1.3.2",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
