--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/ibm-plex-sans": "^4.5.13",
+    "@hello-pangea/dnd": "^16.2.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.34.0",
@@ -18,13 +19,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "typewind": "^0.0.20"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
-    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
